Change in the paragraph

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       <TITLE>My first HTML document</TITLE>
    </HEAD>
    <BODY>
-      <P>Hello world!
+      <P>Hola Toto</P>
    </BODY>
 </HTML>
