--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <HTML>
    <HEAD>
       <TITLE>My first HTML document</TITLE>
+      <link rel="stylesheet" type="text/css" href="./styles.css">
    </HEAD>
+   <Header>
+      <h1>Sebastian Austt</h1>
+   </Header>
    <BODY>
       <P>Hola Toto</P>
    </BODY>
